fixing audio appearance on mobile

--- a/style.css
+++ b/style.css
@@ -291,11 +291,16 @@ audio:hover {
 @media(max-width: 798px) {
   .container,
   .container header {
-    padding: 0px 40px 0px 40px;
+    padding: 0px 50px 0px 50px;
   }
 
+   audio {
+    border: none;
+    box-shadow: none;
+  }
+  
   .big-name-graphic {
-    font-size 2em;
+    font-size .5em;
   }
 
   .main-nav {  
